--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<repositories>
-		<repository>
-			<id>jcenter-snapshots</id>
-			<name>jcenter</name>
-			<url>https://jcenter.bintray.com/</url>
-		</repository>
+<!--		<repository>-->
+<!--			<id>jcenter-snapshots</id>-->
+<!--			<name>jcenter</name>-->
+<!--			<url>https://jcenter.bintray.com/</url>-->
+<!--		</repository>-->
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -83,6 +83,20 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.bucket4j</groupId>
+			<artifactId>bucket4j-core</artifactId>
+			<version>8.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.bucket4j</groupId>
+			<artifactId>bucket4j-redis</artifactId>
+			<version>8.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 
