--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,5 @@
 spring:
   application:
-    name: forumhu
+    name: forumhub
   profiles:
     active: dev
-
-security:
-  user:
-    name: admin
-    password: admin
-
-springdoc:
-  api-docs:
-    path: /api/docs
-  swagger-ui:
-    path: /api/docs-ui
-
-server:
-  port: 8080
