feat(config): Add rate limiting configuration
Added rate limiting configuration to application-dev.yml.  This
includes setting limits for both IP addresses and users.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,5 +34,8 @@ logging:
       hibernate:
         SQL: debug
         type: trace
+rate-limit:
+  ip-limit: 10
+  user-limit: 10
 server:
   port: 8080 # Your server port
